<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/permission_rationale_constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_transparent_background"
    android:focusable="true"
    android:clickable="true">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/permission_rationale_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:cardBackgroundColor="@color/generic_ui_background"
        app:cardCornerRadius="4dp"
        app:cardElevation="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:visibility="visible">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/permission_rationale_top_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/permission_rationale_top_bar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:layout_marginBottom="14dp"
                    android:text="@string/permission_rationale_storage_title"
                    android:textColor="@color/text_header_primary_background"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/permission_rationale_content_constraintview"
                android:visibility="visible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/permission_rationale_top_bar"
                app:layout_constraintBottom_toBottomOf="parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/icon_image"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:tint="@color/generic_ui_light"
                    app:srcCompat="@drawable/baseline_search_24"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/permission_rationale_content_text_constraintview" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/permission_rationale_content_text_constraintview"
                    android:visibility="visible"
                    android:layout_marginBottom="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/icon_image"
                    app:layout_constraintBottom_toTopOf="@id/permission_rationale_content_buttons_constraintview">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/permission_rationale_content_description"
                        android:layout_marginStart="30dp"
                        android:layout_marginEnd="30dp"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:gravity="center_horizontal"
                        android:textSize="16sp"
                        android:text="@string/permission_rationale_storage_body"
                        android:textColor="@color/generic_ui_light"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toTopOf="@id/permission_rationale_content_instructions"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/permission_rationale_content_instructions"
                        android:layout_marginTop="12dp"
                        android:layout_marginStart="30dp"
                        android:layout_marginEnd="30dp"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:gravity="center_horizontal"
                        android:textSize="16sp"
                        android:text="@string/permission_rationale_storage_body_allow_permission"
                        android:visibility="visible"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/permission_rationale_content_description"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/permission_rationale_content_instructions_manually"
                        android:layout_marginTop="12dp"
                        android:layout_marginStart="30dp"
                        android:layout_marginEnd="30dp"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:textSize="16sp"
                        android:text="@string/permission_rationale_storage_body_allow_permission_manually"
                        android:textColor="@color/generic_ui_light"
                        android:visibility="invisible"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/permission_rationale_content_description"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/permission_rationale_content_buttons_constraintview"
                    android:visibility="visible"
                    android:layout_marginTop="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/permission_rationale_content_buttons_cancel_button"
                        android:textColor="@color/colorPrimary"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        style="?android:attr/borderlessButtonStyle"
                        android:paddingStart="12dp"
                        android:paddingEnd="12dp"
                        android:text="@string/rationale_cancel"
                        android:textSize="14sp"
                        android:focusable="true"
                        android:clickable="true"
                        android:enabled="true"
                        app:layout_constraintEnd_toStartOf="@id/permission_rationale_content_buttons_ok_button"
                        app:layout_constraintBottom_toBottomOf="parent"/>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/permission_rationale_content_buttons_ok_button"
                        android:textColor="@color/button_primary_fill_text"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        style="?android:attr/borderlessButtonStyle"
                        android:paddingStart="12dp"
                        android:paddingEnd="12dp"
                        android:text="@string/rationale_ok"
                        android:textSize="14sp"
                        android:focusable="true"
                        android:clickable="true"
                        android:enabled="true"
                        android:background="@color/colorPrimary"
                        android:visibility="visible"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/permission_rationale_content_buttons_app_info_button"
                        android:textColor="@color/button_primary_fill_text"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        style="?android:attr/borderlessButtonStyle"
                        android:paddingStart="12dp"
                        android:paddingEnd="12dp"
                        android:text="@string/app_info"
                        android:textSize="14sp"
                        android:focusable="true"
                        android:clickable="true"
                        android:enabled="true"
                        android:background="@color/colorPrimary"
                        android:visibility="invisible"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>