<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/network_error_constraint_layout"
    android:elevation="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_transparent_background"
    android:focusable="true"
    android:clickable="true">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/network_error_card_view"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:cardBackgroundColor="@color/generic_ui_background"
        app:cardCornerRadius="4dp"
        app:cardElevation="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:visibility="visible">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/network_error_top_bar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/colorPrimary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/network_error_top_bar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/network_error_title"
                    android:textColor="@color/text_header_primary_background"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/network_error_content_constraintview"
                android:visibility="visible"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@id/network_error_top_bar"
                app:layout_constraintBottom_toBottomOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/network_error_content_text_constraintview"
                    android:visibility="visible"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/network_error_content_buttons_constraintview">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/network_error_content_please_update_description"
                        android:layout_marginStart="30dp"
                        android:layout_marginEnd="30dp"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:textSize="16sp"
                        android:textColor="@color/generic_ui_light"
                        android:text="@string/network_error_body"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/network_error_content_buttons_constraintview"
                    android:visibility="visible"
                    android:layout_marginTop="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/network_error_content_buttons_cancel_button"
                        android:textColor="@color/colorPrimary"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        style="?android:attr/borderlessButtonStyle"
                        android:paddingStart="12dp"
                        android:paddingEnd="12dp"
                        android:text="@string/network_error_button_cancel"
                        android:textSize="14sp"
                        android:focusable="true"
                        android:clickable="true"
                        android:enabled="true"
                        app:layout_constraintEnd_toStartOf="@id/network_error_content_buttons_connect_button"
                        app:layout_constraintBottom_toBottomOf="parent"/>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/network_error_content_buttons_connect_button"
                        android:textColor="@color/button_primary_fill_text"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        style="?android:attr/borderlessButtonStyle"
                        android:paddingStart="12dp"
                        android:paddingEnd="12dp"
                        android:text="@string/network_error_button_connect"
                        android:textSize="14sp"
                        android:focusable="true"
                        android:clickable="true"
                        android:enabled="true"
                        android:background="@color/colorPrimary"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>