<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/menu_selection_background"
    android:clickable="true"
    android:focusable="true"
    android:visibility="visible"
    tools:visibility="visible">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="6dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:background="@color/menu_selection_top_bar_background"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="visible">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/main_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:fontFamily="sans-serif-medium"
            android:textSize="20sp"
            android:textColor="@color/text_header_primary_background"
            android:text="@string/app_name"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_content_text_constraintview"
        android:visibility="visible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_top_bar">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/main_app_title_large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="80dp"
            android:paddingEnd="80dp"
            android:fontFamily="sans-serif-medium"
            android:textSize="32sp"
            android:textColor="@color/text_header"
            android:text="@string/app_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/main_content_text_constraintview" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/main_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/generic_ui_light"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/main_app_title_large"
            app:layout_constraintBottom_toTopOf="@id/main_version"
            tools:text="Version 1.0.0"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/main_copyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/generic_ui_light"
            android:text="@string/copyright"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/main_version"
            app:layout_constraintBottom_toTopOf="@id/main_all_rights_reserved" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/main_all_rights_reserved"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/generic_ui_light"
            android:text="@string/copyright_all_rights_reserved"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/main_copyright" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_content_download_constraintview"
        android:visibility="visible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_content_text_constraintview"
        tools:visibility="visible">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/main_content_download_videos_data_button"
            android:scaleType="fitCenter"
            android:background="@color/transparent"
            android:tint="@color/colorAccent"
            android:layout_height="88dp"
            android:layout_width="88dp"
            android:contentDescription="@string/download_accessibility"
            android:visibility="visible"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/baseline_download_for_offline_24" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_content_progressbar_constraintview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="visible"
        tools:visibility="visible">

        <com.silverorange.videoplayer.ui.MockProgressBar
            android:id="@+id/loading_center_mock_progress_bar"
            android:visibility="visible"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="22dp"
            android:alpha="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true" />
        </com.silverorange.videoplayer.ui.MockProgressBar>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
